--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li> Vagrant </li>
         <li> Docker </li>
         <li> Ansible </li>
-        <li> Integración continua</li>
+        <li> Integración continua: Madures y productividad en desarrolo de sofware</li>
     </ul>
 </body>
 </html>
